crates/vexor-compiler/tests/golden/error/output/fn_missing_name.err
Error: parse error
   ╭─[ input:2:4 ]
   │
 2 │ fn (x) = x * 2
   │    ┬  
   │    ╰── invalid identifier
   │    │  
   │    ╰── expected non-keyword identifier
───╯
